--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -10,6 +10,7 @@
                 font-size: 10pt;
                 background: #dedede;
 				border: none;
+				margin: 0;
             }
             h1 {
                 text-align: center;
