--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -8,7 +8,7 @@
             body {
                 font-family: Helvetica, Arial, sans-serif;
                 font-size: 10pt;
-                background: #dedede;
+                background: #000;
 				border: none;
 				margin: 0;
             }
