--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -2,8 +2,10 @@
 <html> 
     <head> 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 		<script src="farmcry.js" type="text/javascript"></script>
         <title>FarmCry</title>
+		<link rel="shortcut icon" href="favicon.ico" />
         <style type="text/css" media="screen"> 
             body {
                 font-family: Helvetica, Arial, sans-serif;
@@ -11,15 +13,13 @@
                 background: #000;
 				border: none;
 				margin: 0;
-            }
-            h1 {
-                text-align: center;
-                text-shadow: 0 2px 1px #fff;
+				padding: 0;
             }
             #canvas {
                 width: 100%;
                 height: 100%;
-                margin: 0 auto;
+                margin: 0;
+				padding: 0;
             }
         </style> 
     </head> 
