--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -18,6 +18,9 @@
             #canvas {
                 width: 100%;
                 height: 100%;
+				min-width: 400px;
+				min-height: 400px;
+				height: 800px \9;
                 margin: 0;
 				padding: 0;
             }
