--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -2,7 +2,8 @@
 <html> 
     <head> 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
+		<script src="global.js" type="text/javascript"></script>
+		<script src="particles.js" type="text/javascript"></script>
 		<script src="farmcry.js" type="text/javascript"></script>
         <title>FarmCry</title>
 		<link rel="shortcut icon" href="favicon.ico" />
