--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -3,8 +3,11 @@
     <head> 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<script src="global.js" type="text/javascript"></script>
-		<script src="particles.js" type="text/javascript"></script>
-		<script src="farmcry.js" type="text/javascript"></script>
+		<script src="options.js" type="text/javascript"></script>
+		<script src="building.js" type="text/javascript"></script>
+		<script src="tile_item.js" type="text/javascript"></script>
+		<!--<script src="particles.js" type="text/javascript"></script>-->
+		<script src="cryme_engine.js" type="text/javascript"></script>
         <title>FarmCry</title>
 		<link rel="shortcut icon" href="favicon.ico" />
         <style type="text/css" media="screen"> 
