--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<script src="global.js" type="text/javascript"></script>
 		<script src="options.js" type="text/javascript"></script>
+		<script src="crop.js" type="text/javascript"></script>
 		<script src="building.js" type="text/javascript"></script>
 		<script src="tile_item.js" type="text/javascript"></script>
 		<!--<script src="particles.js" type="text/javascript"></script>-->
