--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -6,6 +6,7 @@
 	<script src="global.js" type="text/javascript"></script>
 	<script src="options.js" type="text/javascript"></script>
 	<script src="network.js" type="text/javascript"></script>
+	<script src="tile.js" type="text/javascript"></script>
 	<script src="crop.js" type="text/javascript"></script>
 	<script src="building.js" type="text/javascript"></script>
 	<script src="tile_item.js" type="text/javascript"></script>
@@ -28,7 +29,7 @@
 			height: 100%;
 			min-width: 400px;
 			min-height: 400px;
-			height: 800px     \9;
+			height: 800px      \9;
 			margin: 0;
 			padding: 0;
 		}
