--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -6,6 +6,8 @@
 	<script src="global.js" type="text/javascript"></script>
 	<script src="options.js" type="text/javascript"></script>
 	<script src="network.js" type="text/javascript"></script>
+	<script src="map.js" type="text/javascript"></script>
+	<script src="texture.js" type="text/javascript"></script>
 	<script src="tile.js" type="text/javascript"></script>
 	<script src="crop.js" type="text/javascript"></script>
 	<script src="building.js" type="text/javascript"></script>
@@ -29,7 +31,6 @@
 			height: 100%;
 			min-width: 400px;
 			min-height: 400px;
-			height: 800px      \9;
 			margin: 0;
 			padding: 0;
 		}
