petit commit, Modifcation du comportement du clic droit Maintenant le clic droit sers a déplacer la map, et le gauche a agir

--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -37,7 +37,7 @@
 	</style>
 </head>
 <body id="body">
-<canvas id="canvas">
+<canvas id="canvas" oncontextmenu="return false;">
 	<p>Désolé, votre navigateur ne supporte pas Canvas. Mettez-vous à jour</p>
 </canvas>
 </body>
