--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -8,6 +8,8 @@
 	<script src="network.js" type="text/javascript"></script>
 	<script src="map.js" type="text/javascript"></script>
 	<script src="texture.js" type="text/javascript"></script>
+	<script src="hud.js" type="text/javascript"></script>
+	<script src="hud_element.js" type="text/javascript"></script>
 	<script src="tile.js" type="text/javascript"></script>
 	<script src="crop.js" type="text/javascript"></script>
 	<script src="building.js" type="text/javascript"></script>
