--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -8,8 +8,9 @@
 	<script src="network.js" type="text/javascript"></script>
 	<script src="map.js" type="text/javascript"></script>
 	<script src="texture.js" type="text/javascript"></script>
-	<script src="hud.js" type="text/javascript"></script>
-	<script src="hud_element.js" type="text/javascript"></script>
+	<script src="hud/hud.js" type="text/javascript"></script>
+	<script src="hud/hud_element.js" type="text/javascript"></script>
+	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="tile.js" type="text/javascript"></script>
 	<script src="crop.js" type="text/javascript"></script>
 	<script src="building.js" type="text/javascript"></script>
@@ -22,13 +23,16 @@
 		body {
 			font-family: Helvetica, Arial, sans-serif;
 			font-size: 10pt;
-			background: #000;
+			background: #666;
 			border: none;
 			margin: 0;
 			padding: 0;
 		}
 
-		#canvas {
+		.canvasDrawable {
+			position: fixed;
+			left: 0;
+			top: 0;
 			width: 100%;
 			height: 100%;
 			min-width: 400px;
@@ -39,8 +43,10 @@
 	</style>
 </head>
 <body id="body">
-<canvas id="canvas" oncontextmenu="return false;">
+<canvas id="canvas" class="canvasDrawable" oncontextmenu="return false;">
 	<p>Désolé, votre navigateur ne supporte pas Canvas. Mettez-vous à jour</p>
+</canvas>
+<canvas id="canvasHud" class="canvasDrawable" style="z-index: 1;" oncontextmenu="return false;">
 </canvas>
 </body>
 </html> 
