--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -1,66 +1,38 @@
 <!doctype html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<script src="libs/socket.io/socket.io.js" type="text/javascript"></script>
-	<script src="global.js" type="text/javascript"></script>
-	<script src="options.js" type="text/javascript"></script>
-	<script src="network.js" type="text/javascript"></script>
-	<script src="map.js" type="text/javascript"></script>
-	<script src="texture.js" type="text/javascript"></script>
-	<script src="texture_animated.js" type="text/javascript"></script>
-	<script src="hud/hud.js" type="text/javascript"></script>
-	<script src="hud/hud_element.js" type="text/javascript"></script>
-	<script src="hud/notification.js" type="text/javascript"></script>
-	<script src="tile.js" type="text/javascript"></script>
-	<script src="crop.js" type="text/javascript"></script>
-	<script src="building.js" type="text/javascript"></script>
-	<script src="tile_item.js" type="text/javascript"></script>
-	<!--<script src="particles.js" type="text/javascript"></script>-->
-	<script src="cryme_engine.js" type="text/javascript"></script>
-	<title>FarmCry</title>
-	<link rel="shortcut icon" href="favicon.ico"/>
-	<style type="text/css" media="screen">
-		html {
-			min-height: 100%;
-		}
-
-		body {
-			font-family: Helvetica, Arial, sans-serif;
-			font-size: 10pt;
-			background: url('src/hud/background.jpg');
-			border: none;
-			margin: 0;
-			padding: 0;
-		}
-
-		.topLeft {
-			position: fixed;
-			left: 0;
-			top: 0;
-		}
-
-		.canvasDrawable {
-			width: 100%;
-			height: 100%;
-			min-width: 400px;
-			min-height: 400px;
-			margin: 0;
-			padding: 0;
-		}
-	</style>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
+    <script src="libs/socket.io/socket.io.js" type="text/javascript"></script>
+    <script src="global.js" type="text/javascript"></script>
+    <script src="options.js" type="text/javascript"></script>
+    <script src="network.js" type="text/javascript"></script>
+    <script src="map.js" type="text/javascript"></script>
+    <script src="texture.js" type="text/javascript"></script>
+    <script src="texture_animated.js" type="text/javascript"></script>
+    <script src="hud/hud.js" type="text/javascript"></script>
+    <script src="hud/hud_element.js" type="text/javascript"></script>
+    <script src="hud/notification.js" type="text/javascript"></script>
+    <script src="tile.js" type="text/javascript"></script>
+    <script src="crop.js" type="text/javascript"></script>
+    <script src="building.js" type="text/javascript"></script>
+    <script src="tile_item.js" type="text/javascript"></script>
+    <!--<script src="particles.js" type="text/javascript"></script>-->
+    <script src="cryme_engine.js" type="text/javascript"></script>
+    <title>FarmCry</title>
+    <link rel="shortcut icon" href="favicon.ico"/>
 </head>
 <body id="body">
 <canvas id="canvas" class="topLeft canvasDrawable" style="z-index: 0;" oncontextmenu="return false;">
-	<p>Désolé, votre navigateur ne supporte pas Canvas. Mettez-vous à jour</p>
+    <p>Désolé, votre navigateur ne supporte pas Canvas. Mettez-vous à jour</p>
 </canvas>
 <canvas id="canvasAnimation" class="topLeft canvasDrawable" style="z-index: 1;" oncontextmenu="return false;">
 </canvas>
 <canvas id="canvasHud" class="topLeft canvasDrawable" style="z-index: 10;" oncontextmenu="return false;">
 </canvas>
 <audio controls id="audioPlayer" class="topLeft" style="z-index: 11">
-	<source src="src/sounds/MainTheme.ogg" type="audio/ogg">
-	Your browser does not support the audio element.
+    <source src="src/sounds/MainTheme.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
 </audio>
 </body>
 </html> 
