--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -8,6 +8,7 @@
 	<script src="network.js" type="text/javascript"></script>
 	<script src="map.js" type="text/javascript"></script>
 	<script src="texture.js" type="text/javascript"></script>
+	<script src="texture_animated.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/hud_element.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
@@ -33,10 +34,13 @@
 			padding: 0;
 		}
 
-		.canvasDrawable {
+		.topLeft {
 			position: fixed;
 			left: 0;
 			top: 0;
+		}
+
+		.canvasDrawable {
 			width: 100%;
 			height: 100%;
 			min-width: 400px;
@@ -47,12 +51,16 @@
 	</style>
 </head>
 <body id="body">
-<canvas id="canvas" class="canvasDrawable" oncontextmenu="return false;">
+<canvas id="canvas" class="topLeft canvasDrawable" style="z-index: 0;" oncontextmenu="return false;">
 	<p>Désolé, votre navigateur ne supporte pas Canvas. Mettez-vous à jour</p>
 </canvas>
-<canvas id="canvasAnimation" class="canvasDrawable" style="z-index: 1;" oncontextmenu="return false;">
+<canvas id="canvasAnimation" class="topLeft canvasDrawable" style="z-index: 1;" oncontextmenu="return false;">
 </canvas>
-<canvas id="canvasHud" class="canvasDrawable" style="z-index: 10;" oncontextmenu="return false;">
+<canvas id="canvasHud" class="topLeft canvasDrawable" style="z-index: 10;" oncontextmenu="return false;">
 </canvas>
+<audio controls id="audioPlayer" class="topLeft" style="z-index: 11">
+	<source src="src/sounds/MainTheme.ogg" type="audio/ogg">
+	Your browser does not support the audio element.
+</audio>
 </body>
 </html> 
