--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -18,7 +18,8 @@
     <script src="building.js" type="text/javascript"></script>
     <script src="tile_item.js" type="text/javascript"></script>
     <!--<script src="particles.js" type="text/javascript"></script>-->
-    <script src="cryme_engine.js" type="text/javascript"></script>
+    <script src="cryme/canvas.js" type="text/javascript"></script>
+    <script src="cryme/engine.js" type="text/javascript"></script>
     <title>FarmCry</title>
     <link rel="shortcut icon" href="favicon.ico"/>
 </head>
