--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -20,6 +20,7 @@
     <!--<script src="particles.js" type="text/javascript"></script>-->
     <script src="cryme/canvas.js" type="text/javascript"></script>
     <script src="cryme/engine.js" type="text/javascript"></script>
+    <script src="onload.js" type="text/javascript"></script>
     <title>FarmCry</title>
     <link rel="shortcut icon" href="favicon.ico"/>
 </head>
@@ -35,5 +36,24 @@
     <source src="src/sounds/MainTheme.ogg" type="audio/ogg">
     Your browser does not support the audio element.
 </audio>
+<div id="login">
+    <img id="login_game_title" src="src/login/game_title.png" alt="Farmcry"/>
+
+    <div id="login_panel" class="fc_window">
+        <div class="fc_window_content huge_text">
+            <div class="login_field_text">Email :</div>
+            <input id="login_email" name="login_email" type="text" size="35"/><br/>
+
+            <div class="login_field_text">Mot de passe :</div>
+            <input id="login_password" name="login_password" type="text" size="35"/><br/>
+
+            <div class="login_field_text">Serveur :</div>
+            <input id="login_server" name="login_server" type="text" size="35" value="http://localhost:8080"><br/>
+            <input type="checkbox" id="login_remember_me" name="login_remember_me" value="remember_email"/>
+            <label for="login_remember_me"><span class="normal_text">Se souvenir de moi</span></label><br/>
+            <a href="#" id="login_connect_button" class="button green">Se Connecter</a>
+        </div>
+    </div>
+</div>
 </body>
 </html> 
