Got rid of em for px, Added css reset, aiming for pixel perfect cross browser rendering. We're pixel perfect up to 2px, it's not that important in our design and clearly better than before.

--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -42,15 +42,15 @@
     <div id="login_panel" class="fc_window">
         <div class="fc_window_content huge_text">
             <div class="login_field_text">Email :</div>
-            <input id="login_email" name="login_email" type="text" size="35"/><br/>
+            <input id="login_email" name="login_email" type="text" size="35"/>
 
             <div class="login_field_text">Mot de passe :</div>
-            <input id="login_password" name="login_password" type="text" size="35"/><br/>
+            <input id="login_password" name="login_password" type="text" size="35"/>
 
             <div class="login_field_text">Serveur :</div>
-            <input id="login_server" name="login_server" type="text" size="35" value="http://localhost:8080"><br/>
+            <input id="login_server" name="login_server" type="text" size="35" value="http://localhost:8080">
             <input type="checkbox" id="login_remember_me" name="login_remember_me" value="remember_email"/>
-            <label for="login_remember_me"><span class="normal_text">Se souvenir de moi</span></label><br/>
+            <label for="login_remember_me"><span class="normal_text">Se souvenir de moi</span></label>
             <a href="#" id="login_connect_button" class="button green">Se Connecter</a>
         </div>
     </div>
