Login works, but it's a quick fix until I work on a more elegant and error safe solution

--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -50,7 +50,9 @@
             <div class="login_field_text">Serveur :</div>
             <input id="login_server" name="login_server" type="text" size="35" value="http://localhost:8080">
             <input type="checkbox" id="login_remember_me" name="login_remember_me" value="remember_email"/>
-            <label for="login_remember_me"><span class="normal_text">Se souvenir de moi</span></label>
+            <label id="login_remember_me_label" for="login_remember_me">
+                <span class="normal_text">Se souvenir de moi</span>
+            </label>
             <a href="#" id="login_connect_button" class="button green">Se Connecter</a>
         </div>
     </div>
