--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -36,6 +36,14 @@
     <source src="src/sounds/MainTheme.ogg" type="audio/ogg">
     Your browser does not support the audio element.
 </audio>
+<div id="loading_panel" class="fc_window">
+    <div class="fc_window_content huge_text center">
+        Chargement ...
+        <div id="loading_progress" class="progress-bar green stripes">
+            <span style="width: 100%"></span>
+        </div>
+    </div>
+</div>
 <div id="login">
     <img id="login_game_title" src="src/login/game_title.png" alt="Farmcry"/>
 
