--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -20,6 +20,7 @@
     <!--<script src="particles.js" type="text/javascript"></script>-->
     <script src="cryme/canvas.js" type="text/javascript"></script>
     <script src="cryme/engine.js" type="text/javascript"></script>
+    <script src="login.js" type="text/javascript"></script>
     <script src="onload.js" type="text/javascript"></script>
     <title>FarmCry</title>
     <link rel="shortcut icon" href="favicon.ico"/>
