Added fake chat

--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -37,6 +37,35 @@
     <source src="src/sounds/MainTheme.ogg" type="audio/ogg">
     Your browser does not support the audio element.
 </audio>
+<div id="hud_chat">
+    <div id="hud_chat_messages">
+        <div class="chat_text server">12:46 Bienvenue sur farmcry</div>
+        <div class="chat_text player">12:47 Dream_Team | Kikou poil</div>
+        <div class="chat_text player">12:49 Dream_Team | Woliloiliqosidlqsidoz</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+        <div class="chat_text player">00:01 Arkanta | Oe c vid</div>
+    </div>
+    <input id="hud_chat_message" name="hud_chat_message" type="text"/>
+    <a href="#" id="hud_chat_send" class="button">Envoyer</a>
+</div>
 <div id="loading_panel" class="fc_window">
     <div class="fc_window_content huge_text center">
         Chargement ...
