--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
     <script src="libs/socket.io/socket.io.js" type="text/javascript"></script>
+    <script src="libs/date.format.js" type="text/javascript"></script>
     <script src="global.js" type="text/javascript"></script>
     <script src="options.js" type="text/javascript"></script>
     <script src="network.js" type="text/javascript"></script>
