Tweaked login behaviour : while page is not fully loaded, the login button is disabled

--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -68,7 +68,7 @@
             <label id="login_remember_me_label" for="login_remember_me">
                 <span class="normal_text">Se souvenir de moi</span>
             </label>
-            <a href="#" id="login_connect_button" class="button green">Se Connecter</a>
+            <a href="#" id="login_connect_button" class="button green disabled">Se Connecter</a>
         </div>
     </div>
 </div>
