--- a/client/code/premier test/public/index.html
+++ b/client/code/premier test/public/index.html
@@ -14,6 +14,7 @@
     <script src="texture.js" type="text/javascript"></script>
     <script src="texture_animated.js" type="text/javascript"></script>
     <script src="hud/hud_element.js" type="text/javascript"></script>
+    <script src="hud/hud_widgets.js" type="text/javascript"></script>
     <script src="hud/hud.js" type="text/javascript"></script>
     <script src="hud/notification.js" type="text/javascript"></script>
     <script src="tile.js" type="text/javascript"></script>
