--- a/client/code/index.html
+++ b/client/code/index.html
@@ -12,7 +12,7 @@
     <script src="network.js" type="text/javascript"></script>
     <script src="map.js" type="text/javascript"></script>
     <script src="texture.js" type="text/javascript"></script>
-    <script src="texture_animated.js" type="text/javascript"></script>
+    <!--<script src="texture_animated.js" type="text/javascript"></script>-->
     <script src="hud/hud_element.js" type="text/javascript"></script>
     <script src="hud/hud_widgets.js" type="text/javascript"></script>
     <script src="hud/hud.js" type="text/javascript"></script>
