--- a/client/code/index.html
+++ b/client/code/index.html
@@ -1,77 +1,80 @@
 <!doctype html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
-    <script src="libs/socket.io/socket.io.js" type="text/javascript"></script>
-    <script src="libs/date.format.js" type="text/javascript"></script>
-    <script src="global.js" type="text/javascript"></script>
-    <script src="options.js" type="text/javascript"></script>
-    <script src="cryme/canvas.js" type="text/javascript"></script>
-    <script src="cryme/engine.js" type="text/javascript"></script>
-    <script src="network.js" type="text/javascript"></script>
-    <script src="map.js" type="text/javascript"></script>
-    <script src="texture.js" type="text/javascript"></script>
-    <!--<script src="texture_animated.js" type="text/javascript"></script>-->
-    <script src="hud/hud_element.js" type="text/javascript"></script>
-    <script src="hud/hud_widgets.js" type="text/javascript"></script>
-    <script src="hud/hud.js" type="text/javascript"></script>
-    <script src="hud/notification.js" type="text/javascript"></script>
-    <script src="tile.js" type="text/javascript"></script>
-    <script src="crop.js" type="text/javascript"></script>
-    <script src="building.js" type="text/javascript"></script>
-    <script src="tile_item.js" type="text/javascript"></script>
-    <!--<script src="particles.js" type="text/javascript"></script>-->
-    <script src="login.js" type="text/javascript"></script>
-    <script src="onload.js" type="text/javascript"></script>
-    <title>FarmCry</title>
-    <link rel="shortcut icon" href="favicon.ico"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
+	<script src="libs/socket.io/socket.io.js" type="text/javascript"></script>
+	<script src="libs/date.format.js" type="text/javascript"></script>
+	<script src="global.js" type="text/javascript"></script>
+	<script src="options.js" type="text/javascript"></script>
+	<script src="cryme/canvas.js" type="text/javascript"></script>
+	<script src="cryme/engine.js" type="text/javascript"></script>
+	<script src="network.js" type="text/javascript"></script>
+	<script src="map.js" type="text/javascript"></script>
+	<script src="texture.js" type="text/javascript"></script>
+	<!--<script src="texture_animated.js" type="text/javascript"></script>-->
+	<script src="hud/hud_element.js" type="text/javascript"></script>
+	<script src="hud/hud_widgets.js" type="text/javascript"></script>
+	<script src="hud/hud.js" type="text/javascript"></script>
+	<script src="hud/notification.js" type="text/javascript"></script>
+	<script src="tile.js" type="text/javascript"></script>
+	<script src="crop.js" type="text/javascript"></script>
+	<script src="building.js" type="text/javascript"></script>
+	<script src="tile_item.js" type="text/javascript"></script>
+	<!--<script src="particles.js" type="text/javascript"></script>-->
+	<script src="login.js" type="text/javascript"></script>
+	<script src="onload.js" type="text/javascript"></script>
+	<title>FarmCry</title>
+	<link rel="shortcut icon" href="favicon.ico"/>
 </head>
 <body id="body">
 <canvas id="canvas" class="topLeft canvasDrawable" style="z-index: 0;" oncontextmenu="return false;">
-    <p>Désolé, votre navigateur ne supporte pas Canvas. Mettez-vous à jour</p>
+	<p>Désolé, votre navigateur ne supporte pas Canvas. Mettez-vous à jour</p>
 </canvas>
 <canvas id="canvasAnimation" class="topLeft canvasDrawable" style="z-index: 1;" oncontextmenu="return false;">
 </canvas>
+<canvas id="canvasDebug" class="topLeft canvasDrawable" style="z-index: 2;" oncontextmenu="return false;">
+</canvas>
 <canvas id="canvasHud" class="topLeft canvasDrawable" style="z-index: 10;" oncontextmenu="return false;">
 </canvas>
+
 <audio controls id="audioPlayer" class="topLeft" style="z-index: 11">
-    <source src="src/sounds/MainTheme.ogg" type="audio/ogg">
-    Your browser does not support the audio element.
+	<source src="src/sounds/MainTheme.ogg" type="audio/ogg">
+	Your browser does not support the audio element.
 </audio>
 <div id="hud_chat">
-    <div id="hud_chat_messages"></div>
-    <input id="hud_chat_message" name="hud_chat_message" type="text"/>
-    <a href="#" id="hud_chat_send">Envoyer</a>
+	<div id="hud_chat_messages"></div>
+	<input id="hud_chat_message" name="hud_chat_message" type="text"/>
+	<a href="#" id="hud_chat_send">Envoyer</a>
 </div>
 <div id="loading_panel" class="fc_window">
-    <div class="fc_window_content huge_text center">
-        Chargement ...
-        <div id="loading_progress" class="progress-bar green stripes">
-            <span style="width: 100%"></span>
-        </div>
-    </div>
+	<div class="fc_window_content huge_text center">
+		Chargement ...
+		<div id="loading_progress" class="progress-bar green stripes">
+			<span style="width: 100%"></span>
+		</div>
+	</div>
 </div>
 <div id="login">
-    <img id="login_game_title" src="src/login/game_title.png" alt="Farmcry"/>
+	<img id="login_game_title" src="src/login/game_title.png" alt="Farmcry"/>
 
-    <div id="login_panel" class="fc_window">
-        <div class="fc_window_content huge_text">
-            <div class="login_field_text">Email :</div>
-            <input id="login_email" name="login_email" type="text" size="35"/>
+	<div id="login_panel" class="fc_window">
+		<div class="fc_window_content huge_text">
+			<div class="login_field_text">Email :</div>
+			<input id="login_email" name="login_email" type="text" size="35"/>
 
-            <div class="login_field_text">Mot de passe :</div>
-            <input id="login_password" name="login_password" type="text" size="35"/>
+			<div class="login_field_text">Mot de passe :</div>
+			<input id="login_password" name="login_password" type="text" size="35"/>
 
-            <div class="login_field_text">Serveur :</div>
-            <input id="login_server" name="login_server" type="text" size="35" value="http://localhost:8088">
-            <input type="checkbox" id="login_remember_me" name="login_remember_me" value="remember_email"/>
-            <label id="login_remember_me_label" for="login_remember_me">
-                <span class="normal_text">Se souvenir de moi</span>
-            </label>
-            <a href="#" id="login_connect_button" class="button green disabled">Se Connecter</a>
-        </div>
-    </div>
+			<div class="login_field_text">Serveur :</div>
+			<input id="login_server" name="login_server" type="text" size="35" value="http://localhost:8088">
+			<input type="checkbox" id="login_remember_me" name="login_remember_me" value="remember_email"/>
+			<label id="login_remember_me_label" for="login_remember_me">
+				<span class="normal_text">Se souvenir de moi</span>
+			</label>
+			<a href="#" id="login_connect_button" class="button green disabled">Se Connecter</a>
+		</div>
+	</div>
 </div>
 </body>
 </html> 
