--- a/client/code/index.html
+++ b/client/code/index.html
@@ -21,6 +21,7 @@
 	<script src="tile_item.js" type="text/javascript"></script>
 	<script src="crop.js" type="text/javascript"></script>
 	<script src="building.js" type="text/javascript"></script>
+	<script src="character.js" type="text/javascript"></script>
 	<!--<script src="particles.js" type="text/javascript"></script>-->
 	<script src="login.js" type="text/javascript"></script>
 	<script src="onload.js" type="text/javascript"></script>
