--- a/client/code/index.html
+++ b/client/code/index.html
@@ -9,6 +9,7 @@
 	<script src="options.js" type="text/javascript"></script>
 	<script src="cryme/canvas.js" type="text/javascript"></script>
 	<script src="cryme/engine.js" type="text/javascript"></script>
+	<script src="cryme/keyboard.js" type="text/javascript"></script>
 	<script src="network.js" type="text/javascript"></script>
 	<script src="map.js" type="text/javascript"></script>
 	<script src="texture.js" type="text/javascript"></script>
