--- a/client/code/index.html
+++ b/client/code/index.html
@@ -7,6 +7,8 @@
 	<script src="libs/date.format.js" type="text/javascript"></script>
 	<script src="global.js" type="text/javascript"></script>
 	<script src="options.js" type="text/javascript"></script>
+    <script src="game_logic/models.js" type="text/javascript"></script>
+    <script src="game_logic/state.js" type="text/javascript"></script>
 	<script src="cryme/canvas.js" type="text/javascript"></script>
 	<script src="cryme/engine.js" type="text/javascript"></script>
 	<script src="cryme/keyboard.js" type="text/javascript"></script>
