--- a/client/code/index.html
+++ b/client/code/index.html
@@ -7,8 +7,8 @@
 	<script src="libs/date.format.js" type="text/javascript"></script>
 	<script src="global.js" type="text/javascript"></script>
 	<script src="options.js" type="text/javascript"></script>
-    <script src="game_logic/models.js" type="text/javascript"></script>
-    <script src="game_logic/state.js" type="text/javascript"></script>
+	<script src="game_logic/models.js" type="text/javascript"></script>
+	<script src="game_logic/state.js" type="text/javascript"></script>
 	<script src="cryme/canvas.js" type="text/javascript"></script>
 	<script src="cryme/engine.js" type="text/javascript"></script>
 	<script src="cryme/keyboard.js" type="text/javascript"></script>
@@ -22,6 +22,7 @@
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="tile.js" type="text/javascript"></script>
 	<script src="tile_item.js" type="text/javascript"></script>
+	<script src="diagram.js" type="text/javascript"></script>
 	<script src="crop.js" type="text/javascript"></script>
 	<script src="building.js" type="text/javascript"></script>
 	<script src="character.js" type="text/javascript"></script>
