Commit sur la gestion des statistiques. La gestion des diagrammes est séparée dans une nouvelle classe. Important : les données affichées à propos des tiles sont les vrais, on peut déjà voir l'humidité et la fertilité sur la map. Par contre pour des problèmes de coloration, je passe par plusieurs images pour le moment. Je n'en rajouterai normalement pas, vu que c'est censé être géré en post process

--- a/client/code/index.html
+++ b/client/code/index.html
@@ -20,6 +20,7 @@
 	<script src="hud/hud_widgets.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
+	<script src="tile_item_infos.js" type="text/javascript"></script>
 	<script src="tile.js" type="text/javascript"></script>
 	<script src="tile_item.js" type="text/javascript"></script>
 	<script src="diagram.js" type="text/javascript"></script>
