--- a/client/code/index.html
+++ b/client/code/index.html
@@ -13,6 +13,7 @@
 	<script src="cryme/engine.js" type="text/javascript"></script>
 	<script src="cryme/keyboard.js" type="text/javascript"></script>
 	<script src="network.js" type="text/javascript"></script>
+	<script src="tools/transition.js" type="text/javascript"></script>
 	<script src="map.js" type="text/javascript"></script>
 	<script src="texture.js" type="text/javascript"></script>
 	<!--<script src="texture_animated.js" type="text/javascript"></script>-->
