--- a/client/code/index.html
+++ b/client/code/index.html
@@ -5,29 +5,29 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
 	<script src="libs/socket.io/socket.io.js" type="text/javascript"></script>
 	<script src="libs/date.format.js" type="text/javascript"></script>
-	<script src="global.js" type="text/javascript"></script>
+	<script src="cryme/global.js" type="text/javascript"></script>
 	<script src="options.js" type="text/javascript"></script>
 	<script src="game_logic/models.js" type="text/javascript"></script>
 	<script src="game_logic/state.js" type="text/javascript"></script>
 	<script src="cryme/canvas.js" type="text/javascript"></script>
 	<script src="cryme/engine.js" type="text/javascript"></script>
 	<script src="cryme/keyboard.js" type="text/javascript"></script>
-	<script src="network.js" type="text/javascript"></script>
+	<script src="cryme/network.js" type="text/javascript"></script>
 	<script src="tools/transition.js" type="text/javascript"></script>
-	<script src="map.js" type="text/javascript"></script>
-	<script src="texture.js" type="text/javascript"></script>
+	<script src="cryme/map.js" type="text/javascript"></script>
+	<script src="graphic/texture.js" type="text/javascript"></script>
 	<!--<script src="texture_animated.js" type="text/javascript"></script>-->
 	<script src="hud/hud_element.js" type="text/javascript"></script>
 	<script src="hud/hud_widgets.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
-	<script src="tile_item_infos.js" type="text/javascript"></script>
-	<script src="tile.js" type="text/javascript"></script>
-	<script src="tile_item.js" type="text/javascript"></script>
-	<script src="diagram.js" type="text/javascript"></script>
-	<script src="crop.js" type="text/javascript"></script>
-	<script src="building.js" type="text/javascript"></script>
-	<script src="character.js" type="text/javascript"></script>
+	<script src="graphic/tile_item_infos.js" type="text/javascript"></script>
+	<script src="graphic/tile.js" type="text/javascript"></script>
+	<script src="graphic/tile_item.js" type="text/javascript"></script>
+	<script src="graphic/diagram.js" type="text/javascript"></script>
+	<script src="entity/crop.js" type="text/javascript"></script>
+	<script src="entity/building.js" type="text/javascript"></script>
+	<script src="entity/character.js" type="text/javascript"></script>
 	<!--<script src="particles.js" type="text/javascript"></script>-->
 	<script src="login.js" type="text/javascript"></script>
 	<script src="onload.js" type="text/javascript"></script>
