--- a/client/code/index.html
+++ b/client/code/index.html
@@ -6,7 +6,8 @@
 	<script src="libs/socket.io/socket.io.js" type="text/javascript"></script>
 	<script src="libs/date.format.js" type="text/javascript"></script>
 	<script src="cryme/global.js" type="text/javascript"></script>
-	<script src="options.js" type="text/javascript"></script>
+	<script src="graphic/sprite.js" type="text/javascript"></script>
+	<script src="graphic/spriteSheet.js" type="text/javascript"></script>
 	<script src="game_logic/models.js" type="text/javascript"></script>
 	<script src="game_logic/state.js" type="text/javascript"></script>
 	<script src="cryme/canvas.js" type="text/javascript"></script>
