--- a/client/code/index.html
+++ b/client/code/index.html
@@ -12,6 +12,7 @@
 	<script src="game_logic/state.js" type="text/javascript"></script>
 	<script src="cryme/canvas.js" type="text/javascript"></script>
 	<script src="cryme/engine.js" type="text/javascript"></script>
+	<script src="cryme/battle.js" type="text/javascript"></script>
 	<script src="cryme/keyboard.js" type="text/javascript"></script>
 	<script src="cryme/network.js" type="text/javascript"></script>
 	<script src="tools/transition.js" type="text/javascript"></script>
@@ -20,6 +21,7 @@
 	<!--<script src="texture_animated.js" type="text/javascript"></script>-->
 	<script src="hud/hud_element.js" type="text/javascript"></script>
 	<script src="hud/hud_widgets.js" type="text/javascript"></script>
+	<script src="hud/battleElement.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/tile_item_infos.js" type="text/javascript"></script>
