--- a/client/code/index.html
+++ b/client/code/index.html
@@ -21,7 +21,7 @@
 	<!--<script src="texture_animated.js" type="text/javascript"></script>-->
 	<script src="hud/hud_element.js" type="text/javascript"></script>
 	<script src="hud/hud_widgets.js" type="text/javascript"></script>
-	<script src="hud/battleElement.js" type="text/javascript"></script>
+	<script src="graphic/battleElement.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/tile_item_infos.js" type="text/javascript"></script>
