--- a/client/code/index.html
+++ b/client/code/index.html
@@ -24,6 +24,7 @@
 	<script src="graphic/battleElement.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
+	<script src="graphic/map_item.js" type="text/javascript"></script>
 	<script src="graphic/tile_item_infos.js" type="text/javascript"></script>
 	<script src="graphic/tile.js" type="text/javascript"></script>
 	<script src="graphic/tile_item.js" type="text/javascript"></script>
