Commit de la mort qui tue Gestion des animations de déplacement des personnages Gestion de l'axe de déplacement lors de l'animation. Ajout des sprites animés.

--- a/client/code/index.html
+++ b/client/code/index.html
@@ -7,6 +7,7 @@
 	<script src="libs/date.format.js" type="text/javascript"></script>
 	<script src="cryme/global.js" type="text/javascript"></script>
 	<script src="graphic/sprite.js" type="text/javascript"></script>
+	<script src="graphic/sprite_animated.js" type="text/javascript"></script>
 	<script src="graphic/spriteSheet.js" type="text/javascript"></script>
 	<script src="game_logic/models.js" type="text/javascript"></script>
 	<script src="game_logic/state.js" type="text/javascript"></script>
