--- a/client/code/index.html
+++ b/client/code/index.html
@@ -11,12 +11,14 @@
 	<script src="graphic/spriteSheet.js" type="text/javascript"></script>
 	<script src="game_logic/models.js" type="text/javascript"></script>
 	<script src="game_logic/state.js" type="text/javascript"></script>
+	<script src="tools/transition.js" type="text/javascript"></script>
+	<script src="tools/camera.js" type="text/javascript"></script>
 	<script src="cryme/canvas.js" type="text/javascript"></script>
 	<script src="cryme/engine.js" type="text/javascript"></script>
 	<script src="cryme/battle.js" type="text/javascript"></script>
 	<script src="cryme/keyboard.js" type="text/javascript"></script>
 	<script src="cryme/network.js" type="text/javascript"></script>
-	<script src="tools/transition.js" type="text/javascript"></script>
+
 	<script src="cryme/map.js" type="text/javascript"></script>
 	<script src="graphic/texture.js" type="text/javascript"></script>
 	<!--<script src="texture_animated.js" type="text/javascript"></script>-->
