Grosses modification. Correction de bugs de rafraissement de la map. Clean des touches de reaccourcis. Modification de la gesiton de la classe network. Je vais probablement plus architecturer le moteur réseau. Changement des sprites du barn. J'ai rajouté un système d'affichage des ressources stockés dans les barns etc...

--- a/client/code/index.html
+++ b/client/code/index.html
@@ -18,7 +18,7 @@
 	<script src="cryme/battle.js" type="text/javascript"></script>
 	<script src="cryme/keyboard.js" type="text/javascript"></script>
 	<script src="cryme/network.js" type="text/javascript"></script>
-
+	<script src="cryme/network_subsystems.js" type="text/javascript"></script>
 	<script src="cryme/map.js" type="text/javascript"></script>
 	<script src="graphic/texture.js" type="text/javascript"></script>
 	<!--<script src="texture_animated.js" type="text/javascript"></script>-->
@@ -33,6 +33,7 @@
 	<script src="graphic/tile_item.js" type="text/javascript"></script>
 	<script src="graphic/diagram.js" type="text/javascript"></script>
 	<script src="entity/crop.js" type="text/javascript"></script>
+	<script src="entity/storage.js" type="text/javascript"></script>
 	<script src="entity/building.js" type="text/javascript"></script>
 	<script src="entity/character.js" type="text/javascript"></script>
 	<!--<script src="particles.js" type="text/javascript"></script>-->
