--- a/client/code/index.html
+++ b/client/code/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
 	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
 	<script src="libs/date.format.js" type="text/javascript"></script>
