--- a/client/code/index.html
+++ b/client/code/index.html
@@ -25,10 +25,11 @@
 	<script src="cryme/map.js" type="text/javascript"></script>
 	<script src="graphic/texture.js" type="text/javascript"></script>
 	<!--<script src="texture_animated.js" type="text/javascript"></script>-->
-	<script src="hud/hud_element.js" type="text/javascript"></script>
-	<script src="hud/hud_widgets.js" type="text/javascript"></script>
 	<script src="graphic/battleElement.js" type="text/javascript"></script>
 	<script src="hud/hud.js" type="text/javascript"></script>
+    <script src="hud/hud_element.js" type="text/javascript"></script>
+    <script src="hud/widgets/root.js" type="text/javascript"></script>
+    <script src="hud/widgets/text.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/map_item.js" type="text/javascript"></script>
 	<script src="graphic/tile_item_infos.js" type="text/javascript"></script>
