--- a/client/code/index.html
+++ b/client/code/index.html
@@ -29,6 +29,7 @@
     <script src="hud/hud_element.js" type="text/javascript"></script>
     <script src="hud/widgets/root.js" type="text/javascript"></script>
     <script src="hud/widgets/text.js" type="text/javascript"></script>
+    <script src="hud/widgets/button.js" type="text/javascript"></script>
     <script src="hud/hud.js" type="text/javascript"></script>
 	<script src="hud/notification.js" type="text/javascript"></script>
 	<script src="graphic/map_item.js" type="text/javascript"></script>
