Ajout d'une page de register. Pour le moment j'ai juste copié collé le contenu du login.js Je verrais plus tard ce qu'il faut y mettre

--- a/client/code/index.html
+++ b/client/code/index.html
@@ -98,7 +98,9 @@
 				<span class="normal_text">Se souvenir de moi</span>
 			</label>
 			<a href="#" id="login_connect_button" class="button green disabled">Se Connecter</a>
+			<a href="register.html">Don't have an account yet ! No problem, register here !</a>
 		</div>
+
 	</div>
 </div>
 </body>
