Translated html pages

--- a/client/code/register.html
+++ b/client/code/register.html
@@ -20,15 +20,15 @@
 			<div class="register_field_text">Email :</div>
 			<input id="register_email" name="register_email" type="text" size="35"/>
 
-			<div class="register_field_text">Mot de passe :</div>
+			<div class="register_field_text">Password :</div>
 			<input id="register_password" name="register_password" type="text" size="35"/>
 
-			<div class="register_field_text">Serveur :</div>
+			<div class="register_field_text">Server :</div>
 			<input id="register_server" name="register_server" type="text" size="35" value="http://localhost:8088">
 			<br/>
 			<br/>
 			<a href="#" id="register_connect_button" class="button green disabled">Create account</a>
-			<a href="index.html">Return to the login page</a>
+			<a href="/">Return to the login page</a>
 		</div>
 	</div>
 </div>
