--- a/client/code/index.html
+++ b/client/code/index.html
@@ -77,7 +77,7 @@
 </div>
 <div id="loading_panel" class="fc_window">
 	<div class="fc_window_content huge_text center">
-		Chargement ...
+		Loading ...
 		<div id="loading_progress" class="progress-bar green stripes">
 			<span style="width: 100%"></span>
 		</div>
@@ -91,17 +91,17 @@
 			<div class="login_field_text">Email :</div>
 			<input id="login_email" name="login_email" type="text" size="35"/>
 
-			<div class="login_field_text">Mot de passe :</div>
+			<div class="login_field_text">Password :</div>
 			<input id="login_password" name="login_password" type="text" size="35"/>
 
-			<div class="login_field_text">Serveur :</div>
+			<div class="login_field_text">Server :</div>
 			<input id="login_server" name="login_server" type="text" size="35" value="http://localhost:8088">
 			<input type="checkbox" id="login_remember_me" name="login_remember_me" value="remember_email"/>
 			<label id="login_remember_me_label" for="login_remember_me">
-				<span class="normal_text">Se souvenir de moi</span>
+				<span class="normal_text">Remember me</span>
 			</label>
-			<a href="#" id="login_connect_button" class="button green disabled">Se Connecter</a>
-			<a href="register.html">Don't have an account yet ! No problem, register here !</a>
+			<a href="#" id="login_connect_button" class="button green disabled">Log in</a>
+			<a href="register.html">Don't have an account yet ? No problem, register here !</a>
 		</div>
 
 	</div>
