--- a/client/code/index.html
+++ b/client/code/index.html
@@ -77,17 +77,17 @@
 	<a href="#" id="hud_chat_send">Envoyer</a>
 </div>
 <div id="loading_panel" class="fc_window">
-	<div class="fc_window_content huge_text center">
-		Loading ...
+	<div class="fc_window_content">
+		LOADING FARMCRY
 		<div id="loading_progress" class="progress-bar green stripes">
-			<span style="width: 100%"></span>
+			<span style="width: 0%"></span>
 		</div>
 	</div>
 </div>
 <div id="login">
 	<img id="login_game_title" src="src/login/game_title.png" alt="Farmcry"/>
 
-	<div id="login_panel" class="fc_window">
+	<div id="login_panel" class="fc_window2">
 		<div class="fc_window_content huge_text">
 			<div class="login_field_text">Email :</div>
 			<input id="login_email" name="login_email" type="text" size="35"/>
