Gestion des particules sur la map. Refactoring de weathers

--- a/client/code/index.html
+++ b/client/code/index.html
@@ -47,7 +47,8 @@
 	<script src="effects/particles.js" type="text/javascript"></script>
 	<script src="effects/cloud.js" type="text/javascript"></script>
 	<script src="effects/tornado.js" type="text/javascript"></script>
-	<script src="effects/weather.js" type="text/javascript"></script>
+	<script src="effects/tile_effect.js" type="text/javascript"></script>
+	<script src="effects/environment.js" type="text/javascript"></script>
 	<script src="entity/crop.js" type="text/javascript"></script>
 	<script src="entity/storage.js" type="text/javascript"></script>
 	<script src="entity/building.js" type="text/javascript"></script>
