Password textboxes hidden

--- a/client/code/index.html
+++ b/client/code/index.html
@@ -94,7 +94,7 @@
 			<input id="login_email" name="login_email" type="text" size="35"/>
 
 			<div class="login_field_text">Password :</div>
-			<input id="login_password" name="login_password" type="text" size="35"/>
+			<input id="login_password" name="login_password" type="password" size="35"/>
 
 			<div class="login_field_text">Server :</div>
 			<input id="login_server" name="login_server" type="text" size="35" value="http://localhost:8088">
