--- a/client/code/register.html
+++ b/client/code/register.html
@@ -21,7 +21,7 @@
 			<input id="register_email" name="register_email" type="text" size="35"/>
 
 			<div class="register_field_text">Password :</div>
-			<input id="register_password" name="register_password" type="text" size="35"/>
+			<input id="register_password" name="register_password" type="password" size="35"/>
 
 			<div class="register_field_text">Server :</div>
 			<input id="register_server" name="register_server" type="text" size="35" value="http://localhost:8088">
