Translated chat button

--- a/client/code/index.html
+++ b/client/code/index.html
@@ -75,7 +75,7 @@
 <div id="hud_chat">
 	<div id="hud_chat_messages"></div>
 	<input id="hud_chat_message" name="hud_chat_message" type="text"/>
-	<a href="#" id="hud_chat_send">Envoyer</a>
+	<a href="#" id="hud_chat_send">Send</a>
 </div>
 <div id="loading_panel" class="fc_window">
 	<div class="fc_window_content huge_text center">
