--- a/client/code/index.html
+++ b/client/code/index.html
@@ -83,7 +83,7 @@
 <div id="loading_panel" class="fc_window">
 	<div class="fc_window_content huge_text center">
 		Loading ...
-		<div id="loading_progress" class="progress-bar green stripes">
+		<div id="loading_progress" class="progress-bar green stripes stripes-animated">
 			<span style="width: 0%"></span>
 		</div>
 	</div>
