More accurate BF :)

--- a/client/code/index.html
+++ b/client/code/index.html
@@ -94,9 +94,11 @@
 	</div>
 </div>
 <div id="login">
+    <div id="login_menu_bg">
+    </div>
 	<img id="login_game_title" src="src/login/game_title.png" alt="Farmcry"/>
 
-	<div id="login_panel" class="fc_window2">
+	<div id="login_panel" class="fc_window">
 		<div class="fc_window_content huge_text">
 			<div class="login_field_text">Email :</div>
 			<input id="login_email" name="login_email" type="text" size="35"/>
