--- a/client/code/index.html
+++ b/client/code/index.html
@@ -100,20 +100,20 @@
 
 	<div id="login_panel" class="fc_window">
 		<div class="fc_window_content huge_text">
-			<div class="login_field_text">Email :</div>
+			<div class="login_field_text">EMAIL :</div>
 			<input id="login_email" name="login_email" type="text" size="35"/>
 
-			<div class="login_field_text">Password :</div>
+			<div class="login_field_text">PASSWORD :</div>
 			<input id="login_password" name="login_password" type="password" size="35"/>
 
-			<div class="login_field_text">Server :</div>
+			<div class="login_field_text">SERVER :</div>
 			<input id="login_server" name="login_server" type="text" size="35" value="http://localhost:8088">
 			<input type="checkbox" id="login_remember_me" name="login_remember_me" value="remember_email"/>
 			<label id="login_remember_me_label" for="login_remember_me">
-				<span class="normal_text">Remember me</span>
+				<span class="normal_text">REMEMBER ME</span>
 			</label>
-			<a href="#" id="login_connect_button" class="button green disabled">Log in</a>
-			<a href="register.html">Don't have an account yet ? No problem, register here !</a>
+			<a href="#" id="login_connect_button" class="bf_button"></a>
+			DON'T HAVE AN ACCOUNT YET ? TOO BAD !
 		</div>
 
 	</div>
