--- a/client/code/index.html
+++ b/client/code/index.html
@@ -79,6 +79,10 @@
     <source src="src/sounds/bf.mp3" type="audio/mpeg">
 </audio>
 
+<audio controls id="bf-menu-audio" style="display: none" preload="auto" autobuffer>
+    <source src="src/sounds/bf_menu.mp3" type="audio/mpeg">
+</audio>
+
 <div id="hud_chat">
 	<div id="hud_chat_messages"></div>
 	<input id="hud_chat_message" name="hud_chat_message" type="text"/>
@@ -114,6 +118,7 @@
 			</label>
 			<a href="#" id="login_connect_button" class="bf_button"></a>
 			DON'T HAVE AN ACCOUNT YET ? TOO BAD !
+            <a href="#" id="disable_login_music_button">DISABLE MUSIC</a>
 		</div>
 
 	</div>
