Added chrome warning

--- a/client/code/index.html
+++ b/client/code/index.html
@@ -104,7 +104,8 @@
 				<span class="normal_text">Remember me</span>
 			</label>
 			<a href="#" id="login_connect_button" class="button green disabled">Log in</a>
-			<a href="register.html">Don't have an account yet ? No problem, register here !</a>
+			<a href="register.html">Don't have an account yet ? No problem, register here !</a></br>
+            <span class="small_text">FarmCry works better in Chrome and Safari on iOS 6+. Features like sound may be unsupported on other browsers.</span>
 		</div>
 
 	</div>
